[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["matsui-k <osskil611@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
numpy = "1.18.2"
scipy = "1.4.1"
networkx = "2.4"
numba = "0.48.0"
line-profiler = "^3.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
